--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,6 @@
 <!-- この記述がblogのshow画面に表示されるコメント入力欄になります -->
-<%= form_with(model: [blog, comment]) do |form| %>
+<%# デフォルトでlocal :trueになっている %>
+<%= form_with(model: [blog, comment], local: false) do |form| %>
 <% if comment.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
